--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,70 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <script src="https://kit.fontawesome.com/558e5faccf.js" crossorigin="anonymous"></script>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  <header>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand p-3" href="/">Bookers</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <% if user_signed_in? %>
+          <ul class="navbar-nav ml-auto">
+          <li>
+            <%= link_to "Home", user_path(current_user),class: 'nav-link fas fa-home text-light'  %>
+           </li>
+           <li>
+            <%= link_to "Users", users_path,class: 'nav-link fas fa-users text-light'  %>
+            </li>
+           <li>
+            <%= link_to "Books", books_path,class: 'nav-link fas fa-book-open text-light'  %>
+           </li>
+           <li>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete,class: 'nav-link fas fa-sign-out-alt text-light'  %>
+           </li>
+        <% else %>
+           <li>
+            <%= link_to "Home", root_path,class: 'nav-link fas fa-home text-light' %>
+           </li>
+           <li>
+            <i></i>
+            <%= link_to "About", about_path,class: 'nav-link fas fa-link text-light' %>
+           </li>
+           <li>
+            <%= link_to "Sign up", new_user_registration_path,class: 'nav-link fas fa-user-plus text-light' %>
+           </li>
+           <li>
+            <%= link_to "Log in", new_user_session_path,class: 'nav-link fas fa-sign-in-alt text-light' %>
+          </li>
+        <% end %>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+<% flash.each do |message_type, message| %>
+  <%= content_tag :div, message, class: message_type %>
+
+<% end %>
+
+
+  <%= yield %>
+  <div class="row">
+      <div class="mx-auto">
+        <p>CopyRight Infratop.inc</p>
+      </div>
+    </div>
   </body>
 </html>
