--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>User info</h1>
-<%= form_for(@user) do |f| %>
+<%= form_with model: @user do |f| %>
 <%= render 'flash', model: @user %>
   <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName"%>
