--- a/app/views/books/_info.html.erb
+++ b/app/views/books/_info.html.erb
@@ -1,7 +1,7 @@
 
    <div class="col-md-3">
 
-   <%= form_with model: @book do |f| %>
+   <%= form_with model: book do |f| %>
    <div>
      <h1>User info</h1>
    <%= image_tag user.get_profile_image(63,63) %>
