--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,7 +14,9 @@
                 <% end %>
           </td>
           <td></td>
-          <td><%= @book.title %></td>
+          <td>
+            <%= link_to @book.title %>
+          </td>
           <td><%= @book.body %></td>
           <% if @book.user_id == current_user.id %>
             <td><%= link_to "Edit", edit_book_path(@book), class:"btn btn-success"%></td>
